--- a/index.html
+++ b/index.html
@@ -21,16 +21,7 @@
   text-align: justify;
 }
 
-.menu a {
-  background-color: darkblue;
-  padding: 10px;
-  margin-top: 10px;
-  display: block;
-  width: 100%;
-  color: yellow;
-  font-size: 20px;
-  border-radius: 10px;
-}
+
 
 .main {
   float: left;
@@ -62,13 +53,7 @@
 
 <div style="overflow:auto">
   <div class="menu">
-    <a href="topsite.html" target="_blank">Top Online Educational Platform</a>
-    <a href="setupcost.html" target="_blank">Online ClassRoom Low & High Setup</a>
-    <!-- <a href="#">Cost (Devices & Experts)</a> -->
-    <!-- <a href="#">Marketing</a> -->
-    <a href="starting.html" target="_blank">Starting Video Samples</a>
-    <a href="thumbnail.html" target="_blank">Video Thumbnail Samples</a>
-    <a href="pwork.html">Present Works</a>
+    <a href="AlokShikha.html" target="_blank">Alok-Shikha</a>
   </div>
 
   <div class="main">
