--- a/AlokShikha.html
+++ b/AlokShikha.html
@@ -512,7 +512,26 @@ background-color: #f1f1f1;
     <h3>Skills</h3>
     <button type="button" class="collapsible">Facebook-Setup</button>
     <div class="content">
-    
+        URL = Uniform Resource Locator <br><br><br>
+        SEO = Search Engine Optimization <br><br><br>
+        <input type="radio" name="" id="">Types Of Boosting & Promoting (Legal and Illegal  )
+
+   <input type="checkbox" name="" id=""> Attractive Logo & Cover <br><br>
+   <input type="checkbox" name="" id=""> Logo & Cover (SEO) <br><br>
+   <input type="checkbox" name="" id=""> Page (SEO) <br><br>
+   <input type="checkbox" name="" id=""> Custom URL Setup <br><br>
+   <input type="checkbox" name="" id=""> Optimize Page <br><br>
+   <input type="checkbox" name="" id=""> Action Button <br><br>
+   <input type="checkbox" name="" id=""> Auto Questions & Answers   <br><br>
+   <input type="checkbox" name="" id=""> Ad Account <br><br>
+   <input type="checkbox" name="" id=""> Whatsapp Business Account <br><br>
+   <input type="checkbox" name="" id=""> Meta Business Account <br><br>
+   <input type="checkbox" name="" id=""> Ad Campaign <br><br>
+   <input type="checkbox" name="" id=""> Area (Minimum & Maximum) <br><br>
+   <input type="checkbox" name="" id=""> Gender <br><br>
+   <input type="checkbox" name="" id=""> Interest Sets <br><br>
+   <input type="checkbox" name="" id=""> ? <br><br>
+   
     </div>
     
     <button type="button" class="collapsible">YouTube Setup</button>
