--- a/AlokShikha.html
+++ b/AlokShikha.html
@@ -457,7 +457,8 @@ background-color: #f1f1f1;
     
     <button type="button" class="collapsible">3-5 Videos Upload</button>
     <div class="content">
-    ?
+    <a href="dailyvideo.pptx" target="_blank">Daily Video Upload</a>
+    <img src="DailyVideoUpload.png" style="width:100%;">
     </div>
     
     <button type="button" class="collapsible">Image / Poll Post</button>
@@ -514,7 +515,7 @@ background-color: #f1f1f1;
     <div class="content">
         URL = Uniform Resource Locator <br><br><br>
         SEO = Search Engine Optimization <br><br><br>
-        <input type="radio" name="" id="">Types Of Boosting & Promoting (Legal and Illegal  )
+        <input type="radio" name="" id="">Types Of Boosting & Promoting (Legal and Illegal  ) <br><br><br>
 
    <input type="checkbox" name="" id=""> Attractive Logo & Cover <br><br>
    <input type="checkbox" name="" id=""> Logo & Cover (SEO) <br><br>
