--- a/AlokShikha.html
+++ b/AlokShikha.html
@@ -57,6 +57,11 @@ background-color: #f1f1f1;
 <h2>Alok-Shikha</h2>
 
 
+<button type="button" class="collapsible">DUMMY Text</button>
+<div class="content">
+<a href="dummytext.txt">Dummy-Text For Greetings & Inbox</a> <br><br><br>
+<a href="">Dummy-Text For Comment</a>
+</div>
 <button type="button" class="collapsible">DBMS</button>
 <div class="content">
 <p>
