--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 
 <div style="overflow:auto">
   <div class="menu">
-    <a href="AlokShikha.html" target="_blank">Alok-Shikha</a>
+    <a href="alokshikha.html" target="_blank">Alok-Shikha Update</a>
+    <a href="as.html" target="_blank">Alok-Shikha Details</a>
   </div>
 
   <div class="main">
