--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 
 <div style="overflow:auto">
   <div class="menu">
-    <a href="alokshikha.html" target="_blank">Alok-Shikha Update</a> <br><br>
+    <a href="alokshikha.html" target="_blank">Alok-Shikha Update</a> <br><br><br>
+    <a href="https://www.allbanglanewspaper.co/prothom-alo/" target="_blank">Some</a> <br><br><br>
     <a href="as.html" target="_blank">Alok-Shikha Details</a>
   </div>
 
