--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <div style="overflow:auto">
   <div class="menu">
     <a href="update.html" target="_blank">👉Alok-Shikha Update</a> <br><br><br>
-    <a href="https://www.allbanglanewspaper.co/prothom-alo/" target="_blank">Some</a> <br><br><br>
+    <a href="Services.html" target="_blank">Services</a> <br><br><br>
     <a href="as.html" target="_blank">Alok-Shikha Details</a>
   </div>
 
