--- a/Services.html
+++ b/Services.html
@@ -145,6 +145,12 @@ Dynamic WebSite With Basic App = 30000
   <li>MS PowerPoint = ?</li>
  
 </div>
+<button class="collapsible">Video-Graphy</button>
+<div class="content">
+  <li>?</li>
+  
+ 
+</div>
 😊😊😊
 <button class="collapsible">Monthly & Yearly Cost</button>
 <div class="content">
@@ -155,7 +161,7 @@ Dynamic WebSite With Basic App = 30000
   <li>Video-Editor = 50000</li>
   <li>Digital-Marketer = 30000</li>
   <li>Composer = 20000</li>
-  <li>Composer = 20000</li>
+  <li>Physical-Marketer = 20000</li>
   <li>Customer-Care = 20000</li>
   <li>Branch-Manager = 30000</li>
   <li>Peon = 10000</li><br>
