--- a/Services.html
+++ b/Services.html
@@ -94,6 +94,7 @@ border-radius: 10px;
 <li>FaceBook Add Account</li>
 <li>Google & FaceBook Account Verification</li>
 <li>Master Card Add On Google & Facebook Account</li>
+<li>Google & Facebook Ads Monetization</li>
 </div>
 <button class="collapsible">Domain-Buying</button>
 <div class="content">
