--- a/update.html
+++ b/update.html
@@ -22,17 +22,13 @@
     </style>
 </head>
 <body>
+    <br>
     <center>
         <button>AlokShikha & LensCafe Studio</button> <br><br>
     </center>
     <div class="container">
-        <h5 class="bg-danger">Alok-Shikha</h5>
+        <h5 class="bg-danger">Devices</h5>
         <table>
-            <tr>
-                <th>Devices</th>
-                <th>Cost</th>
-                <!-- <th></th> -->
-            </tr>
             <tr>
                 <td>Board 65 (LG)</td>
                 <td>2,90,000</td>
