--- a/as.html
+++ b/as.html
@@ -5,6 +5,7 @@
 <title>Alok-Shikha</title>
 <link rel="stylesheet" href="topsite.css">
 <style>
+    
 .collapsible {
 background-color: #777;
 color: white;
@@ -33,6 +34,11 @@ background-color: #f1f1f1;
     font-size: 20px;
     
 }
+.ovrflw{
+overflow-x:auto;
+font-size:10vw"
+
+}
 
 /* Responsive */
 
@@ -48,6 +54,9 @@ background-color: #f1f1f1;
     margin: 0%;
     text-align: center;
 
+}
+iframe, .ovrflw{
+width: 100%;
 }
 }
 </style>
@@ -160,7 +169,7 @@ background-color: #f1f1f1;
 </div>
 
 <button type="button" class="collapsible">Course-Package</button>
-<div class="content">
+<div class="content ovrflw" >
 <pre>
 <h1>Professional</h1>
 
@@ -252,56 +261,56 @@ background-color: #f1f1f1;
 <div class="content">
     <center>
         <h3>Thumbnail Samples</h3>
-    <img src="thm1.jpeg">
-    <img src="thm2.jpeg">
-    <img src="thm3.jpeg">
-    <img src="thm4.jpeg">
-    <img src="thm5.jpeg">
-    <img src="thm6.jpeg">
-    <img src="thm7.jpeg">
-    <img src="thm8.jpeg">
-    <img src="thm9.jpeg">
-    <img src="thm10.jpeg">
-    <img src="thm11.jpeg">
-    <img src="thm12.jpeg">
-    <img src="thm13.jpeg">
-    <img src="thm14.jpeg">
-    <img src="thm15.jpeg">
-    <img src="thm16.jpeg">
-    <img src="thm17.jpeg">
-    <img src="thm18.jpeg">
-    <img src="thm19.jpeg">
-    <img src="thm20.jpeg">
-    <img src="thm21.jpeg">
-    <img src="thm22.jpeg">
-    <img src="thm23.jpeg">
-    <img src="thm24.jpeg">
-    <img src="thm25.jpeg">
-    <img src="thm26.jpeg">
-    <img src="thm27.jpeg">
-    <img src="thm28.jpeg">
-    <img src="thm29.jpeg">
-    <img src="thm30.jpeg">
-    <img src="thm31.jpeg">
-    <img src="thm32.jpeg">
-    <img src="thm33.jpeg">
-    <img src="thm34.jpeg">
-    <img src="thm35.jpeg">
-    <img src="thm36.jpeg">
-    <img src="thm37.jpeg">
-    <img src="thm38.jpeg">
-    <img src="thm39.jpeg">
-    <img src="thm40.jpeg">
-    <img src="thm41.jpeg">
-    <img src="thm42.jpeg">
-    <img src="thm43.jpeg">
-    <img src="thm44.jpeg">
-    <img src="thm45.jpeg">
-    <img src="thm46.jpeg">
-    <img src="thm47.jpeg">
-    <img src="thm48.jpeg">
-    <img src="thm49.jpeg">
-    <img src="thm50.jpeg">
+    <img src="thm1.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm2.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm3.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm4.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm5.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm6.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm7.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm8.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm9.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm10.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm11.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm12.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm13.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm14.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm15.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm16.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm17.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm18.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm19.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm20.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm21.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm22.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm23.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm24.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm25.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm26.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm27.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm28.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm29.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm30.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm31.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm32.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm33.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm34.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm35.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm36.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm37.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm38.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm39.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm40.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm41.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm42.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm43.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm44.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm45.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm46.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm47.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm48.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm49.jpeg" style="max-width:100%;height:auto;">
+    <img src="thm50.jpeg" style="max-width:100%;height:auto;">
     </center>
 </div>
 
