--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <a href="update.html" target="_blank">Alok-Shikha</a> <br><br><br>
     <a href="Services.html" target="_blank">Services & Cost</a> <br><br><br>
     <a href="as.html" target="_blank">Alok-Shikha Details</a>
+    <a href="Sample.html" target="_blank">Professional-Course</a>
   </div>
 
   <div class="main">
