--- a/Sample.html
+++ b/Sample.html
@@ -88,8 +88,8 @@ h3:hover .hide{
 <button class="collapsible">Course Type ?</button>
 <div class="content">
   <br>
-  <input type="radio" name="student" id="">Short<br><br>
-  <input type="radio" name="student" id="">Long <br><br>
+  <input type="radio" name="course" id="">Short<br><br>
+  <input type="radio" name="course" id="">Long <br><br>
 </div>
 <button class="collapsible">Courses & Total CLasses</button>
 <div class="content">
@@ -103,9 +103,9 @@ h3:hover .hide{
 <button class="collapsible">Class Room / Online ?</button>
 <div class="content">
   <br>
-  <input type="radio" name="student" id="">Classroom<br><br>
-  <input type="radio" name="student" id="">Online (Live)  <br><br>
-  <input type="radio" name="student" id="">Online (Recorded) <br><br> <br><br><br>
+  <input type="radio" name="room" id="">Classroom<br><br>
+  <input type="radio" name="room" id="">Online (Live)  <br><br>
+  <input type="radio" name="room" id="">Online (Recorded) <br><br> <br><br><br>
 </div> 
 <button class="collapsible">Marketing-Cost</button>
 <div class="content">
