--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <div class="menu">
     <a href="update.html" target="_blank">Alok-Shikha</a> <br><br><br>
     <a href="Services.html" target="_blank">Services & Cost</a> <br><br><br>
-    <a href="as.html" target="_blank">Alok-Shikha Details</a>
+    <a href="as.html" target="_blank">Alok-Shikha Details</a><br><br><br>
     <a href="Sample.html" target="_blank">Professional-Course</a>
   </div>
 
