--- a/Sample.html
+++ b/Sample.html
@@ -94,17 +94,17 @@ h3:hover .hide{
 <button class="collapsible">Courses & Total CLasses</button>
 <div class="content">
   <br>
-  1-<input type="text" style="width: 50%; height: 22px;"  id=""><br><br>
-  2-<input type="text" style="width: 50%; height: 20px;"  id=""><br><br>
-  3-<input type="text" style="width: 50%; height: 20px;"  id=""><br><br>
-  4-<input type="text" style="width: 50%; height: 20px;"  id=""><br><br>
-  5-<input type="text" style="width: 50%; height: 20px;"  id=""><br><br>
+  1-<input type="text" style="width: 100%; height: 22px;"  id=""><br><br>
+  2-<input type="text" style="width: 100%; height: 20px;"  id=""><br><br>
+  3-<input type="text" style="width: 100%; height: 20px;"  id=""><br><br>
+  4-<input type="text" style="width: 100%; height: 20px;"  id=""><br><br>
+  5-<input type="text" style="width: 100%; height: 20px;"  id=""><br><br>
 </div>
 <button class="collapsible">Class Room / Online ?</button>
 <div class="content">
   <br>
-  <input type="radio" name="room" id="">Classroom<br><br>
-  <input type="radio" name="room" id="">Online (Live)  <br><br>
+  <input type="radio" name="room" id="">Classroom<br>
+  <input type="radio" name="room" id="">Online (Live)  <br>
   <input type="radio" name="room" id="">Online (Recorded) <br><br> <br><br><br>
 </div> 
 <button class="collapsible">Marketing-Cost</button>
