--- a/Sample.html
+++ b/Sample.html
@@ -123,9 +123,9 @@ background-color: transparent;
 <button class="collapsible">Class Room / Online ?</button>
 <div class="content">
   <br>
-  <input type="radio" name="room" id="">Classroom<br>
-  <input type="radio" name="room" id="">Online (Live)  <br>
-  <input type="radio" name="room" id="">Online (Recorded) <br><br>
+  <input type="radio" name="room" id="">Classroom
+  <input type="radio" name="room" id="">Online (Live)
+  <input type="radio" name="room" id="">Online (Recorded)<br><br>
 </div> 
 <button class="collapsible">Marketing</button>
 <div class="content">
