--- a/update.html
+++ b/update.html
@@ -39,11 +39,11 @@
             </tr>
             <tr>
                 <td>Camera</td>
-                <td>1,20,000</td>
+                <td>1,14,000</td>
             </tr>
             <tr>
                 <td>Microphone</td>
-                <td>30,000</td>
+                <td>29,000</td>
             </tr>
             <tr>
                 <td>Godox-Lights</td>
@@ -71,7 +71,19 @@
             </tr>
             <tr>
                 <td>Carpet</td>
+                <td>10,700</td>
+            </tr>
+            <tr>
+                <td>Tool (2pcs)</td>
+                <td>2000</td>
+            </tr>
+            <tr>
+                <td>Falls-Ceiling</td>
                 <td>10,000</td>
+            </tr>
+            <tr>
+                <td>Carpenter</td>
+                <td>8,400</td>
             </tr>
             <tr>
                 <td>Green Screen </td>
@@ -83,7 +95,19 @@
             </tr>
             <tr>
                 <td>Acoustic-Foam</td>
-                <td>30,000</td>
+                <td>48,000</td>
+            </tr>
+            <tr>
+                <td>Acoustic-Foam-Setup</td>
+                <td>5500</td>
+            </tr>
+            <tr>
+                <td>Gum & Brush</td>
+                <td>4000</td>
+            </tr>
+            <tr>
+                <td>Computer-Table</td>
+                <td>6000</td>
             </tr>
             <tr>
                 <td>Router</td>
