--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
     <a href="update.html" target="_blank">Alok-Shikha</a> <br><br><br>
     <a href="Services.html" target="_blank">Services & Cost</a> <br><br><br>
     <a href="as.html" target="_blank">Alok-Shikha Details</a><br><br><br>
-    <a href="Sample.html" target="_blank">Professional-Course</a>
+    <a href="Sample.html" target="_blank">Professional-Course</a><br><br><br>
+    <a href="topCommonBusiness.html" target="_blank">Common-Business</a><br><br><br>
+    <a href="topCoommonadsFB.html" target="_blank">Common-Ads-FB</a><br><br><br>
+    <a href="topTargetingCustomers.html" target="_blank">Targeting-Customers</a><br><br><br>
+    <a href="topTasks.html" target="_blank">Recent-Tasks</a><br><br><br>
   </div>
 
   <div class="main">
