--- a/update.html
+++ b/update.html
@@ -22,6 +22,10 @@
         font-family: cursive;
         color: orange;
         }
+        .roku{
+        color: blue;
+        font-family: fantasy;
+        }
 
     </style>
 </head>
@@ -34,7 +38,7 @@
         <h5 class="bg-danger">Devices</h5>
         <table>
             <tr>
-                <td>Board 65 (LG)</td>
+                <td class="roku">Board 65 (LG)</td>
                 <td>2,90,000</td>
             </tr>
             <tr>
@@ -50,11 +54,11 @@
                 <td>29,000</td>
             </tr>
             <tr>
-                <td>Godox-Lights</td>
+                <td class="roku">Godox-Lights</td>
                 <td>12,000</td>
             </tr>
             <tr>
-                <td>Microphone Normal</td>
+                <td class="roku">Microphone Normal</td>
                 <td>4000</td>
             </tr>
             <tr>
@@ -62,7 +66,7 @@
                 <td>50,000</td>
             </tr>
             <tr>
-                <td>Tripod</td>
+                <td class="roku">Tripod</td>
                 <td>3500</td>
             </tr>
             <tr>
@@ -90,11 +94,11 @@
                 <td>8,400</td>
             </tr>
             <tr>
-                <td>Green Screen </td>
+                <td class="roku">Green Screen </td>
                 <td>1000</td>
             </tr>
             <tr>
-                <td>Backdrop</td>
+                <td class="roku">Backdrop</td>
                 <td>4000</td>
             </tr>
             <tr>
@@ -126,17 +130,17 @@
                 <td class="clr">IPS</td>
                 <td>40,000</td>
             </tr>
-            <!-- <tr>
+            <tr>
                 <td class="clr">Clock</td>
                 <td>1000</td>
-            </tr> -->
+            </tr>
             
         </table><br>
         <h5 class="bg-danger">Virtual-Asstes</h5>
         <table>
         
             <tr>
-                <td>WebSite</td>
+                <td class="roku">WebSite</td>
                 <td>100000</td>
             </tr>
             <tr>
